--- a/themes/XP/_window.scss
+++ b/themes/XP/_window.scss
@@ -10,19 +10,18 @@
     padding: 0 0 3px 0;
     -webkit-font-smoothing: antialiased;
 }
+
 .title-bar {
-    font-family: "Trebuchet MS";
-    background: linear-gradient(
-        180deg,
-        rgba(9, 151, 255, 1) 0%,
-        rgba(0, 83, 238, 1) 8%,
-        rgba(0, 80, 238, 1) 40%,
-        rgba(0, 102, 255, 1) 88%,
-        rgba(0, 102, 255, 1) 93%,
-        rgba(0, 91, 255, 1) 95%,
-        rgba(0, 61, 215, 1) 96%,
-        rgba(0, 61, 215, 1) 100%
-    );
+    // font-family: "Trebuchet MS";
+    background: linear-gradient(180deg,
+            rgba(9, 151, 255, 1) 0%,
+            rgba(0, 83, 238, 1) 8%,
+            rgba(0, 80, 238, 1) 40%,
+            rgba(0, 102, 255, 1) 88%,
+            rgba(0, 102, 255, 1) 93%,
+            rgba(0, 91, 255, 1) 95%,
+            rgba(0, 61, 215, 1) 96%,
+            rgba(0, 61, 215, 1) 100%);
     padding: 3px 5px 3px 3px;
     border-top: 1px solid #0831d9;
     border-left: 1px solid #0831d9;
@@ -40,6 +39,7 @@
 
 .title-bar-controls {
     display: flex;
+
     button {
         min-width: 21px;
         min-height: 21px;
@@ -50,53 +50,69 @@
         background-color: #0050ee;
         transition: background 100ms;
         border: none;
+
         &:active,
         &:hover,
         &:focus {
             box-shadow: none !important;
         }
     }
+
     button[aria-label="Minimize"] {
         background-image: svg-load("./icon/minimize.svg");
+
         &:hover {
             background-image: svg-load("./icon/minimize-hover.svg");
         }
+
         &:not(:disabled):active {
             background-image: svg-load("./icon/minimize-active.svg");
         }
     }
+
     button[aria-label="Maximize"] {
         background-image: svg-load("./icon/maximize.svg");
+
         &:hover {
             background-image: svg-load("./icon/maximize-hover.svg");
         }
+
         &:not(:disabled):active {
             background-image: svg-load("./icon/maximize-active.svg");
         }
     }
+
     button[aria-label="Restore"] {
         background-image: svg-load("./icon/restore.svg");
+
         &:hover {
             background-image: svg-load("./icon/restore-hover.svg");
         }
+
         &:not(:disabled):active {
             background-image: svg-load("./icon/restore-active.svg");
         }
     }
+
     button[aria-label="Help"] {
         background-image: svg-load("./icon/help.svg");
+
         &:hover {
             background-image: svg-load("./icon/help-hover.svg");
         }
+
         &:not(:disabled):active {
             background-image: svg-load("./icon/help-active.svg");
         }
     }
+
     button[aria-label="Close"] {
         background-image: svg-load("./icon/close.svg");
+
         &:hover {
             background-image: svg-load("./icon/close-hover.svg");
         }
+
         &:not(:disabled):active {
             background-image: svg-load("./icon/close-active.svg");
         }
@@ -117,9 +133,11 @@
     padding: 1px 2px;
     border-right: 1px solid rgba(208, 206, 191, 0.75);
     border-left: 1px solid rgba(255, 255, 255, 0.75);
-    &:first-of-type{
+
+    &:first-of-type {
         border-left: none;
     }
+
     &:last-of-type {
         border-right: none;
     }
